# livekit-voice-agent-cn

./: .gitignore  .livekit.env.example  LICENSE  README.md
agent-android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
agent-android/app/: build.gradle.kts  proguard-rules.pro
agent-android/app/src/main/: AndroidManifest.xml
agent-android/app/src/main/java/io/livekit/voiceagentdemo/: MainActivity.kt
agent-android/app/src/main/java/io/livekit/voiceagentdemo/data/: Profile.kt  Settings.kt
agent-android/app/src/main/java/io/livekit/voiceagentdemo/token/: TokenSigner.kt
agent-android/app/src/main/java/io/livekit/voiceagentdemo/ui/: CallScreen.kt  ConnectScreen.kt
agent-android/app/src/main/java/io/livekit/voiceagentdemo/ui/theme/: Color.kt  Theme.kt
agent-android/app/src/main/res/drawable/: ic_launcher_foreground.xml
agent-android/app/src/main/res/values/: strings.xml  themes.xml
agent-android/gradle/: libs.versions.toml
agent-py/: .env.example  .gitignore  README.md  pyproject.toml  test_volc_asr.py
agent-py/src/: agent.py  livekit_profile.py  stt_volcengine.py  tts_volcengine.py
agent-web/: .env.example  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
agent-web/server/: index.mjs
agent-web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
agent-web/src/components/: AgentStage.tsx  ChatPanel.tsx  ConnectScreen.tsx  Controls.tsx  SessionView.tsx
scripts/: check-secrets.sh
sherpa-voice/: .env.example  README.md  pyproject.toml  start.sh
sherpa-voice/app/: __init__.py  config.py  engine.py  resample.py  server.py
